[package]
name = "systemd-api"
version = "0.1.0"
authors = ["Marcin Kolenda"]
edition = "2024"
license = "Apache-2.0"
build = "build.rs"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5.3.1"

[build-dependencies]
bindgen = "0.72.0"

